--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -135,13 +135,32 @@
 
 
 		</li>
+	</ol>
+
+	<h3> Додоткові Задачі </h3>
+
+	<ol>
+		<li>
+			<a href="./task_aditional_1.html"> Додоткова задача № 1 </a>
+			<p>Дано ширину екрана та кількість елементів, які повинні бути відображені у рядку. Визначити ширину елементів,
+				які повинні бути відображені у цьому рядку. </p>
+		</li>
 
 
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>
+			<a href="./task_aditional_2.html"> Додоткова задача № 2 </a>
+			<p> З клавіатури вводиться розмір заробітної плати та розмір прожиткового мінімуму. Визначити розмір соціальної
+				допомоги (ввжаємо, що заробітна плата є меншою).
+			</p>
+		</li>
+
+
+		<li>
+			<a href="./task_aditional_3.html"> Додоткова задача № 3 </a>
+			<p> Скласти алгоритм, який обчислює цілу і дробову частину даного числа х. Наприклад: число 23,56 => ціла: 23,
+				дробова: 0,56. </p>
+		</li>
+
 	</ol>
 </body>
 
